apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard
          image: adguard/adguardhome:v0.107.79
          ports:
            - containerPort: 3000
              name: setup
            - containerPort: 80
              name: web
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          volumeMounts:
            - name: data
              mountPath: /opt/adguardhome/conf
              subPath: conf
            - name: data
              mountPath: /opt/adguardhome/work
              subPath: work
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: adguard-data
