apps/adguard/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: adguard
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.0.221
spec:
  type: LoadBalancer
  selector:
    app: adguard
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
