apps/adguard/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app: adguard
  ports:
    - name: setup
      port: 3000
      targetPort: 3000
    - name: web
      port: 80
      targetPort: 80
